--- a/Source/VerifyServer/App.config
+++ b/Source/VerifyServer/App.config
@@ -33,4 +33,8 @@
     <add name="WSEntities" connectionString="metadata=res://*/UserModel.csdl|res://*/UserModel.ssdl|res://*/UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
+  <appSettings>
+    <add key="Address" value="net.tcp://localhost:6200" />
+  </appSettings>
+
 </configuration>
