--- a/Source/Server/InsightServer/App.config
+++ b/Source/Server/InsightServer/App.config
@@ -37,6 +37,7 @@
   <appSettings>
     <add key="Address" value="localhost" />
     <add key="IsCompres" value="false" />
+    <add key="IvsAddress" value="net.tcp://localhost:6200/VerifyServer" />
     <add key="CompatibleVersion" value="10000" />
     <add key="UpdateVersion" value="10000" />
   </appSettings>
