--- a/Source/Server/Services/SuperDentist/Interface/Interface.csproj
+++ b/Source/Server/Services/SuperDentist/Interface/Interface.csproj
@@ -46,6 +46,10 @@
       <HintPath>..\..\..\..\..\..\ws3\Source\packages\EntityFramework.6.1.3\lib\net40\EntityFramework.SqlServer.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="Qiniu.4.0">
+      <HintPath>..\..\..\..\packages\Qiniu.6.2.1.1\lib\Net40\Qiniu.4.0.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
