--- a/Source/VerifyServer/App.config
+++ b/Source/VerifyServer/App.config
@@ -35,6 +35,7 @@
 
   <appSettings>
     <add key="Address" value="net.tcp://localhost:6200" />
+    <add key="Mode" value="debug" />
   </appSettings>
 
 </configuration>
