--- a/Source/Client/Common/Common.csproj
+++ b/Source/Client/Common/Common.csproj
@@ -261,7 +261,7 @@
     <None Include="Service References\Service\Insight.WS.Server.Common.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\Service\Insight.WS.Server.xsd">
+    <None Include="Service References\Service\Insight.WS.Verify.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\Service\service.wsdl" />
