--- a/Source/Test/interface/Interface.csproj
+++ b/Source/Test/interface/Interface.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{C06D8C7B-25EF-41B2-9C99-BC8E833D3BC8}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Test</RootNamespace>
+    <RootNamespace>Insight.WS.Test.Interface</RootNamespace>
     <AssemblyName>Interface</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -51,6 +51,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Entity\Comments.cs" />
+    <Compile Include="Entity\MDE_Favorites.cs" />
+    <Compile Include="Entity\MDE_Message.cs" />
+    <Compile Include="Entity\MDG_Member.cs" />
+    <Compile Include="Entity\MemberInfo.cs" />
+    <Compile Include="Entity\SDC_CaseHistory.cs" />
+    <Compile Include="Entity\SDC_FirstVisit.cs" />
+    <Compile Include="Entity\SDC_Subsequent.cs" />
+    <Compile Include="Entity\SDC_Summary.cs" />
+    <Compile Include="Entity\SDG_Group.cs" />
+    <Compile Include="Entity\SDG_GroupMember.cs" />
+    <Compile Include="Entity\SDO_Advertisement.cs" />
+    <Compile Include="Entity\SDO_Recommend.cs" />
+    <Compile Include="Entity\SDO_Tutorial.cs" />
+    <Compile Include="Entity\SDO_TutorialComment.cs" />
+    <Compile Include="Entity\SDO_TutorialPraise.cs" />
+    <Compile Include="Entity\SDT_Attitude.cs" />
+    <Compile Include="Entity\SDT_Comment.cs" />
+    <Compile Include="Entity\SDT_Forward.cs" />
+    <Compile Include="Entity\SDT_Praise.cs" />
+    <Compile Include="Entity\SDT_Speech.cs" />
+    <Compile Include="Entity\SDT_Topic.cs" />
+    <Compile Include="Entity\Speech.cs" />
+    <Compile Include="Entity\Topic.cs" />
+    <Compile Include="Entity\Topics.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util.cs" />
