--- a/Source/Server/Services/SuperDentist/AppService/AppService.csproj
+++ b/Source/Server/Services/SuperDentist/AppService/AppService.csproj
@@ -64,6 +64,7 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccess.cs" />
     <Compile Include="Interface.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AppService.cs" />
