--- a/Source/Server/Services/SuperDentist/AppService/AppService.csproj
+++ b/Source/Server/Services/SuperDentist/AppService/AppService.csproj
@@ -66,8 +66,10 @@
   <ItemGroup>
     <Compile Include="DataAccess.cs" />
     <Compile Include="Interface.cs" />
+    <Compile Include="Member.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AppService.cs" />
+    <Compile Include="Topic.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Common\Common.csproj">
