--- a/Source/LogServer/App.config
+++ b/Source/LogServer/App.config
@@ -3,7 +3,7 @@
 
   <configSections>
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
 
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
@@ -30,12 +30,12 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="WSEntities" connectionString="metadata=res://*/UserModel.csdl|res://*/UserModel.ssdl|res://*/UserModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="WSEntities" connectionString="metadata=res://*/LogModel.csdl|res://*/LogModel.ssdl|res://*/LogModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
   <appSettings>
-    <add key="Address" value="net.tcp://localhost:6200" />
-    <add key="Mode" value="debug" />
+    <add key="Address" value="http://localhost:6514" />
+    <add key="LogLocal" value="C:\Users\xan\Projects\insight_ws3\Debug\Logs" />
   </appSettings>
 
 </configuration>
