--- a/Source/LogServer/App.config
+++ b/Source/LogServer/App.config
@@ -36,6 +36,7 @@
   <appSettings>
     <add key="Address" value="http://localhost:6514" />
     <add key="LogLocal" value="C:\Users\xan\Projects\insight_ws3\Debug\Logs" />
+    <add key="IvsAddress" value="net.tcp://localhost:6200/VerifyServer" />
   </appSettings>
 
 </configuration>
