--- a/Source/LogServer/LogServer.csproj
+++ b/Source/LogServer/LogServer.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Security" />
     <Reference Include="System.ServiceModel" />
     <Reference Include="System.ServiceModel.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -64,8 +65,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Function\DataAccess.cs" />
+    <Compile Include="Function\JsonResult.cs" />
     <Compile Include="Function\Interface.cs" />
     <Compile Include="Function\LogManage.cs" />
+    <Compile Include="Function\UserIdParse.cs" />
     <Compile Include="Function\Util.cs" />
     <Compile Include="LogModel.Context.cs">
       <AutoGen>True</AutoGen>
@@ -96,6 +100,11 @@
       <DependentUpon>ProjectInstaller.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\Service\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="SYS_Logs.cs">
       <DependentUpon>LogModel.tt</DependentUpon>
     </Compile>
@@ -113,6 +122,19 @@
     </EntityDeploy>
     <None Include="LogModel.edmx.diagram">
       <DependentUpon>LogModel.edmx</DependentUpon>
+    </None>
+    <None Include="Service References\Service\Insight.WS.Log.Service.Session.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\Service\Insight.WS.Verify.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\Service\service.wsdl" />
+    <None Include="Service References\Service\service.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\Service\service1.xsd">
+      <SubType>Designer</SubType>
     </None>
   </ItemGroup>
   <ItemGroup>
@@ -134,6 +156,18 @@
       <DependentUpon>LogModel.edmx</DependentUpon>
       <LastGenOutput>LogModel.cs</LastGenOutput>
     </Content>
+    <None Include="Service References\Service\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+    <None Include="Service References\Service\configuration.svcinfo" />
+    <None Include="Service References\Service\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\Service\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
