--- a/Source/Test/interface/Interface.csproj
+++ b/Source/Test/interface/Interface.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Entity\SDT_Topic.cs" />
     <Compile Include="Entity\Speech.cs" />
     <Compile Include="Entity\SYS_Logs.cs" />
+    <Compile Include="Entity\SYS_Logs_Rules.cs" />
     <Compile Include="Entity\Topic.cs" />
     <Compile Include="Entity\Topics.cs" />
     <Compile Include="Program.cs" />
