--- a/Source/Test/interface/Interface.csproj
+++ b/Source/Test/interface/Interface.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -51,6 +52,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DateTimeConverter.cs" />
     <Compile Include="Entity\Comments.cs" />
     <Compile Include="Entity\MDE_Favorites.cs" />
     <Compile Include="Entity\MDE_Message.cs" />
