--- a/Source/Server/Common/Common.csproj
+++ b/Source/Server/Common/Common.csproj
@@ -80,6 +80,7 @@
     <Compile Include="ExtendClass\GuidParse.cs" />
     <Compile Include="ExtendClass\JsonResult.cs" />
     <Compile Include="ExtendClass\Services.cs" />
+    <Compile Include="Function\DateTimeConverter.cs" />
     <Compile Include="Function\SmsCode.cs" />
     <Compile Include="Function\DataAccess.cs" />
     <Compile Include="Function\Clearing.cs">
