修改服务方式，分离了基础服务

--- a/Source/Server/InsightServer/App.config
+++ b/Source/Server/InsightServer/App.config
@@ -37,11 +37,14 @@
   <appSettings>
 
     <!--服务器配置-->
-    <add key="Address" value="localhost" />
-    <add key="IsCompres" value="false" />
-    <add key="IvsAddress" value="net.tcp://localhost:6200/VerifyServer" />
+    <add key="Address" value="http://localhost" />
+    <add key="Port" value="6280" />
+    <add key="BaseServer" value="http://localhost:8180/" />
+    <add key="VerifyServer" value="http://localhost:8280/" />
+    <add key="LogServer" value="http://localhost:8514/" />
+
     <add key="CompatibleVersion" value="100" />
-    <add key="UpdateVersion" value="110" />
+    <add key="UpdateVersion" value="200" />
 
     <!--七牛云配置-->
     <add key="AccessKey" value="ZaIJ_A1zuYgEV7WheXdwitdAPkeC2aiYTBtS2RYP" />
