--- a/Source/Common/App.Config
+++ b/Source/Common/App.Config
@@ -1,6 +1,2 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration>
-  <connectionStrings>
-    <add name="WSEntities" connectionString="metadata=res://*/ORM.WSModel.csdl|res://*/ORM.WSModel.ssdl|res://*/ORM.WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WIN10VM;initial catalog=Insight;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
-</configuration>
+<configuration />
