--- a/Source/InsightServer/App.config
+++ b/Source/InsightServer/App.config
@@ -39,12 +39,9 @@
     <!--服务器配置-->
     <add key="Address" value="http://base.insight.com"/>
     <add key="Port" value="6280"/>
-    
-    <add key="CompatibleVersion" value="1000"/>
-    <add key="UpdateVersion" value="2100"/>
-    
-    <add key="BaseServer" value="http://localhost:6200/"/>
-    <add key="LogServer" value="http://localhost:6514/"/>
+        
+    <add key="BaseServer" value="http://localhost:6200/V1.0/"/>
+    <add key="LogServer" value="http://localhost:6514/V1.0/"/>
 
   </appSettings>
 
