--- a/Source/Test/App.config
+++ b/Source/Test/App.config
@@ -31,7 +31,7 @@
   </entityFramework>
 
   <connectionStrings>
-    <add name="Entities" connectionString="metadata=res://*/ORM.WSModel.csdl|res://*/ORM.WSModel.ssdl|res://*/ORM.WSModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=localhost;initial catalog=Insight;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient"/>
+    <add name="Entities" connectionString="metadata=res://*/Entity.Model.csdl|res://*/Entity.Model.ssdl|res://*/Entity.Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(local);initial catalog=Insight_WS;persist security info=True;user id=sa;password=sa;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
 
   <appSettings>
