--- a/Source/InsightServer/App.config
+++ b/Source/InsightServer/App.config
@@ -37,7 +37,7 @@
   <appSettings>
 
     <!--服务器配置-->
-    <add key="Address" value="http://base.insight.com"/>
+    <add key="Address" value="http://ws.insight.com:6280"/>
     <add key="BaseServer" value="http://localhost:6200"/>
 
   </appSettings>
