--- a/Source/Services/Commons/Commons.csproj
+++ b/Source/Services/Commons/Commons.csproj
@@ -51,7 +51,7 @@
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\..\packages\EntityFramework.dll</HintPath>
-      <Private>True</Private>
+      <Private>False</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -73,6 +73,7 @@
     <ProjectReference Include="..\..\..\..\Utils\Utils\Utils.csproj">
       <Project>{0C3F2F08-6816-49FD-BB13-8526E43ACCC6}</Project>
       <Name>Utils</Name>
+      <Private>False</Private>
     </ProjectReference>
     <ProjectReference Include="..\..\Common\Common.csproj">
       <Project>{132ce7b2-a22c-430e-947c-db629960ae7a}</Project>
