--- a/Source/InsightServer/App.config
+++ b/Source/InsightServer/App.config
@@ -39,6 +39,7 @@
     <!--服务器配置-->
     <add key="Address" value="http://ws.insight.com:6280"/>
     <add key="BaseServer" value="http://localhost:6200"/>
+    <add key="Redis" value="localhost:6379"/>
 
   </appSettings>
 
